--- a/前端技术.md
+++ b/前端技术.md
@@ -16,17 +16,83 @@
 
 
 
+[初学者网站](http://www.runoob.com)
+
 > ### JavaScript
 
 
 
+> ### HTML DOM
 
+http://www.runoob.com/htmldom/htmldom-nodes.html HTMLDOM教程
+
+当网页被加载时，浏览器会创建页面的文档对象模型DOM（Document Object Model）。
+
+在 HTML DOM 中，所有事物都是节点。DOM 是被视为节点树的 HTML。
+
+## DOM 节点  DOM Nodes
+
+根据 W3C 的 HTML DOM 标准，HTML 文档中的所有内容都是节点：
+
+- 整个文档是一个文档节点    DocumentNode
+- 每个 HTML 元素是元素节点 ElementNode
+- HTML 元素内的文本是文本节点 TextNode
+- 每个 HTML 属性是属性节点        AttributeNode
+- 注释是注释节点
+
+
+
+> ### 事件处理
+
+**添加事件的三种方式**
+
+- 直接在元素节点上添加事件
+
+  ```html
+  <button onclick="showDate();">查看时间</button>
+  ```
+
+- 为元素节点onclick属性添加事件(推荐方式):
+
+  ```javascript
+  var p2 = document.getElementById("p2");
+  p2.onclick = function(){
+  	p2.style.textDecoration = "line-through";
+  };
+  ```
+
+- 使用addEventListener添加事件，注意这时候不需要加on前缀，并且这种方式可以添加多个click事件
+
+  ```javascript
+  var f = function(){
+  	p2.style.color = "#124323";
+  };
+  p2.addEventListener("click",f);
+  ```
+
+**删除事件**
+
+- 1
+
+  ```javascript
+  p2.onclick = null;
+  ```
+
+- 使用removeEventListener
+
+  ```javascript
+  p2.removeEventListener("click",f);
+  ```
+
+**常见的DOM事件**
+
+http://www.runoob.com/jsref/dom-obj-event.html DOM事件详细描述
 
 
 
 > ### CSS的选择器
 
-
+具体查看：http://www.runoob.com/cssref/css-selectors.html
 
 
 
