--- a/前端技术.md
+++ b/前端技术.md
@@ -20,6 +20,317 @@
 
 > ### JavaScript
 
+JS教程 : http://www.runoob.com/js/js-tutorial.html
+
+##### JavaScript 用法
+
+HTML 中的脚本必须位于 <script> 与 </script> 标签之间。
+
+脚本可被放置在 HTML 页面的 <body> 和 <head> 部分中。
+
+
+
+- 内联JS，JS代码必须放在<script> 与 </script> 标签之间
+
+  ```html
+  <!--放置在Body中的JS -->
+  <!DOCTYPE html>
+  <html>
+  <body>
+  <h1>我的 Web 页面</h1>
+  <p id="demo">一个段落</p>
+  <button type="button" onclick="myFunction()">尝试一下</button>
+  <script>
+  function myFunction()
+  {
+      document.getElementById("demo").innerHTML="我的第一个 JavaScript 函数";
+  }
+  </script>
+  </body>
+  </html>
+  ```
+
+  ```html
+  <!-- 放置在head头标签中的JS -->
+  <!DOCTYPE html>
+  <html>
+  <head>
+  <script>
+  function myFunction()
+  {
+      document.getElementById("demo").innerHTML="我的第一个 JavaScript 函数";
+  }
+  </script>
+  </head>
+  <body>
+  <h1>我的 Web 页面</h1>
+  <p id="demo">一个段落</p>
+  <button type="button" onclick="myFunction()">尝试一下</button>
+  </body>
+  </html>
+  ```
+
+  Tips:因为JS需要操作DOM对象，JS最佳存放位置为body标签的最后，而css样式表的最佳位置为head标签的最前. 先加载样式表再加载JS.
+
+- 外联式JS
+
+  ```html
+  <!-- 最佳规范 -->
+  <!DOCTYPE html>
+  <html>
+  <head>
+  <!-- 外联式样式 -->
+  <link rel="stylesheet" type="text/css" href="style.css">
+   <style>
+    
+   </style>
+  </head>
+  <body>
+    
+  <button type="button" onclick="myFunction()">尝试一下</button>
+    
+   <!-- 外联式JS -->
+   <script src="Public/js/jquery.min.js-v=2.1.4"></script>
+   <!-- 内联式样式 -->
+    <script>
+        function myFunction()
+        {
+            document.getElementById("demo").innerHTML="我的第一个 JavaScript 函数";
+        }
+      //为了避免js操作的的DOM还没加载就已经执行js代码
+      
+      //这两个方法的效果都是一样的，都是在dom文档树加载完之后执行一个函数（注意，这里面的文档树加载完		不代表全部文件加载完）。
+
+  	//而window.onload是在dom文档树加载完和所有文件加载完之后执行一个函数。也就是说			 $(document).ready要比window.onload先执行。
+      
+      window.onload = function(){
+          //..js执行代码
+      };
+      document.ready = function(){
+        //..js执行代码
+      };
+    </script>
+  </body>
+  </html>
+  ```
+
+  ​
+
+##### JavaScript 显示数据
+
+JavaScript 可以通过不同的方式来输出数据：
+
+- 使用 **window.alert()** 弹出警告框。
+- 使用 **document.write()** 方法将内容写到 HTML 文档中。
+- 使用 **innerHTML** 写入到 HTML 元素。
+- 使用 **console.log()** 写入到浏览器的控制台(谷歌浏览器按F12查看)
+
+
+
+##### JavaScript语法
+
+- 变量
+
+  ```javascript
+  //变量必须以字母开头
+  //变量也能以 $ 和 _ 符号开头（不过我们不推荐这么做）
+  //变量名称对大小写敏感（y 和 Y 是不同的变量）
+  //使用 var 关键词来声明变量  variable
+  var x;
+  var x = 11;
+  var x = "1234567";
+  var x = [1,"1222222"];
+  ```
+
+- 数据类型
+
+  ```javascript
+  //字符串（String）、数字(Number)、布尔(Boolean)、数组(Array)、对象(Object)、空（Null）、未定义（Undefined）。
+
+  var str = "12345";
+  var number = 11212121;
+  var f = 1222.1212; //数字类型包括整型和浮点型
+  var flag = false;
+  var arr = [1,2,3,4,5,"12121212"]; //数组可以有多种数据类型
+  var n = null;//空Null
+  var x;       //未定义Undefined
+
+  var obj = {
+    key:"value" , //键值对 # JSON
+    onclick:function(){}
+  }; 
+  obj.onclick();//调用方法
+  obj.onclick =function(){//赋值
+    
+  };
+  var person = {
+  firstname : "John",
+  lastname  : "Doe",
+  id        :  5566
+  objT    ： obj
+  };
+
+
+  var carname=new String;
+  var x=      new Number;
+  var y=      new Boolean;
+  var cars=   new Array;
+  var person= new Object;
+
+  //对象类型Object可以包含其他的类型
+
+  var x = "John";
+  var y = new String("John");
+  typeof x // 返回 String
+  typeof y // 返回 Object
+  ```
+
+- 对象
+
+- 函数
+
+- 作用域
+
+  ```javascript
+  // 此处可调用 carName 变量
+
+  function myFunction() {
+      carName = "Volvo"; //没用使用var关键字 相当于全局变量 等价于window.carName
+       //HTML 中的全局变量
+  	//在 HTML 中, 全局变量是 window 对象: 所有数据变量都属于 window 对象。
+      // 此处可调用 carName 变量
+
+  }
+  ```
+
+- 类型转换
+
+  ```javascript
+  var x = "1";
+  x = Number(x); //类型转换，可以转换成数字类型
+  x = parseInt(x);//只能转化成int类型
+
+  typeof "John"                 // 返回 string 
+  typeof 3.14                   // 返回 number
+  typeof NaN                    // 返回 number
+  typeof false                  // 返回 boolean
+  typeof [1,2,3,4]              // 返回 object
+  typeof {name:'John', age:34}  // 返回 object
+  typeof new Date()             // 返回 object
+  typeof function () {}         // 返回 function
+  typeof myCar                  // 返回 undefined (如果 myCar 没有声明)
+  typeof null                   // 返回 object
+  ```
+
+- 正则表达式
+
+  ```javascript
+  //   /正则表达式主体/修饰符(可选)
+  var patt = /runoob/i;   //正则对象
+
+  //正则表达式修饰符
+  //i	执行对大小写不敏感的匹配。
+  //g	执行全局匹配（查找所有匹配而非在找到第一个匹配后停止）。
+  //m	执行多行匹配。
+
+
+  /*是否带有小数*/
+  function    isDecimal(strValue )  {  
+     var  objRegExp= /^\d+\.\d+$/;
+     return  objRegExp.test(strValue);  
+  }  
+
+  /*校验是否中文名称组成 */
+  function ischina(str) {
+  	var reg=/^[\u4E00-\u9FA5]{2,4}$/;   /*定义验证表达式*/
+  	return reg.test(str);     /*进行验证*/
+  }
+
+  /*校验是否全由8位数字组成 */
+  function isStudentNo(str) {
+  	var reg=/^[0-9]{8}$/;   /*定义验证表达式*/
+  	return reg.test(str);     /*进行验证*/
+  }
+
+  /*校验电话码格式 */
+  function isTelCode(str) {
+  	var reg= /^((0\d{2,3}-\d{7,8})|(1[3584]\d{9}))$/;
+  	return reg.test(str);
+  }
+
+  /*校验邮件地址是否合法 */
+  function IsEmail(str) {
+  	var reg=/^([a-zA-Z0-9_-])+@([a-zA-Z0-9_-])+(\.[a-zA-Z0-9_-])+/;
+  	return reg.test(str);
+  }
+  ```
+
+- 错误处理
+
+  ```javascript
+  try {
+    //在这里运行代码
+  } catch(err) {
+    //在这里处理错误
+  }
+  //
+  function myFunction() {
+      var message, x;
+      message = document.getElementById("message");
+      message.innerHTML = "";
+      x = document.getElementById("demo").value;
+      try { 
+          if(x == "")  throw "值为空";
+          if(isNaN(x)) throw "不是数字";
+          x = Number(x);
+          if(x < 5)    throw "太小";
+          if(x > 10)   throw "太大";
+      }
+      catch(err) {
+          message.innerHTML = "错误: " + err;
+      }
+  }
+  ```
+
+- [严格模式](http://www.runoob.com/js/js-strict.html)
+
+  ```javascript
+  "use strict";  //在所有js代码之前定义为严格模式
+
+  ```
+
+- JSON
+
+  ```javascript
+
+  var text = {
+     name:"wang",
+     sex:"male" //最后一个对象不要加分号
+  };
+  var obj  = JSON.parse(text); //转化为js的对象
+  var json = JSON.stringify(obj); //	用于将 JavaScript 值转换为 JSON 字符串。
+  ```
+
+- 计时事件
+
+  通过使用 JavaScript，我们有能力作到在一个设定的时间间隔之后来执行代码，而不是在函数被调用后立即执行。我们称之为计时事件。
+
+  在 JavaScritp 中使用计时事件是很容易的，两个关键方法是:
+
+  - setInterval() - 间隔指定的毫秒数不停地执行指定的代码。
+  - setTimeout() - 暂停指定的毫秒数后执行指定的代码
+
+  ```javascript
+  var inerval = setInterval(fucntion(){
+     
+      clearInterval(inerval);//最后清除掉计时方法
+  },1000);//每一秒钟执行一次
+
+  setTimeout//只会执行一次
+  ```
+
+  ​
+
 
 
 > ### HTML DOM
@@ -34,11 +345,19 @@ http://www.runoob.com/htmldom/htmldom-nodes.html HTMLDOM教程
 
 根据 W3C 的 HTML DOM 标准，HTML 文档中的所有内容都是节点：
 
-- 整个文档是一个文档节点    DocumentNode
+- 整个文档是一个文档节点    [DocumentNode文档对象详解](http://www.runoob.com/jsref/dom-obj-document.html)
 - 每个 HTML 元素是元素节点 ElementNode
 - HTML 元素内的文本是文本节点 TextNode
 - 每个 HTML 属性是属性节点        AttributeNode
 - 注释是注释节点
+
+## Browser浏览器对象
+
+- [Window对象](http://www.runoob.com/jsref/obj-window.html)
+- [Navigator对象](http://www.runoob.com/jsref/obj-navigator.html)
+- [Screen对象](http://www.runoob.com/jsref/obj-screen.html)
+- [History对象](http://www.runoob.com/jsref/obj-history.html)
+- [Location对象](http://www.runoob.com/jsref/obj-location.html)
 
 
 
@@ -52,7 +371,7 @@ http://www.runoob.com/htmldom/htmldom-nodes.html HTMLDOM教程
   <button onclick="showDate();">查看时间</button>
   ```
 
-- 为元素节点onclick属性添加事件(推荐方式):
+- 为元素节点onclick属性添加事件(推荐方式)缺点是只能挂一个事件，后挂的事件会替换之前的事件:
 
   ```javascript
   var p2 = document.getElementById("p2");
