--- a/前端技术.md
+++ b/前端技术.md
@@ -167,22 +167,29 @@ JavaScript 可以通过不同的方式来输出数据：
   firstname : "John",
   lastname  : "Doe",
   id        :  5566
-  objT    ： obj
+  objT    ： obj //最后一个属性不要加,号
   };
 
+   var carname=new String;
 
-  var carname=new String;
-  var x=      new Number;
-  var y=      new Boolean;
-  var cars=   new Array;
-  var person= new Object;
+    var x=      new Number;
 
-  //对象类型Object可以包含其他的类型
+    var y=      new Boolean;
 
-  var x = "John";
-  var y = new String("John");
-  typeof x // 返回 String
-  typeof y // 返回 Object
+    var cars=   new Array;
+
+    var person= new Object;
+
+    //对象类型Object可以包含其他的类型
+
+    var x = "John";
+
+    var y = new String("John");
+
+    typeof x // 返回 String
+
+    typeof y // 返回 Object
+
   ```
 
 - 对象
@@ -191,9 +198,10 @@ JavaScript 可以通过不同的方式来输出数据：
 
 - 作用域
 
-  ```javascript
-  // 此处可调用 carName 变量
 
+```javascript
+
+  // 此处可调用 carName 变量
   function myFunction() {
       carName = "Volvo"; //没用使用var关键字 相当于全局变量 等价于window.carName
        //HTML 中的全局变量
@@ -201,7 +209,7 @@ JavaScript 可以通过不同的方式来输出数据：
       // 此处可调用 carName 变量
 
   }
-  ```
+```
 
 - 类型转换
 
@@ -233,64 +241,78 @@ JavaScript 可以通过不同的方式来输出数据：
   //g	执行全局匹配（查找所有匹配而非在找到第一个匹配后停止）。
   //m	执行多行匹配。
 
+   /*是否带有小数*/
+    function    isDecimal(strValue )  {  
+       var  objRegExp= /^\d+\.\d+$/;
+       return  objRegExp.test(strValue);  
+    }  
 
-  /*是否带有小数*/
-  function    isDecimal(strValue )  {  
-     var  objRegExp= /^\d+\.\d+$/;
-     return  objRegExp.test(strValue);  
-  }  
+   /*校验是否中文名称组成 */
+    function ischina(str) {
+    	var reg=/^[\u4E00-\u9FA5]{2,4}$/;   /定义验证表达式/
+    	return reg.test(str);     /进行验证/
 
-  /*校验是否中文名称组成 */
-  function ischina(str) {
-  	var reg=/^[\u4E00-\u9FA5]{2,4}$/;   /*定义验证表达式*/
-  	return reg.test(str);     /*进行验证*/
-  }
+    }
 
-  /*校验是否全由8位数字组成 */
-  function isStudentNo(str) {
-  	var reg=/^[0-9]{8}$/;   /*定义验证表达式*/
-  	return reg.test(str);     /*进行验证*/
-  }
+    /*校验是否全由8位数字组成 */
 
-  /*校验电话码格式 */
-  function isTelCode(str) {
-  	var reg= /^((0\d{2,3}-\d{7,8})|(1[3584]\d{9}))$/;
-  	return reg.test(str);
-  }
+    function isStudentNo(str) {
 
-  /*校验邮件地址是否合法 */
-  function IsEmail(str) {
-  	var reg=/^([a-zA-Z0-9_-])+@([a-zA-Z0-9_-])+(\.[a-zA-Z0-9_-])+/;
-  	return reg.test(str);
-  }
+    	var reg=/^[0-9]{8}$/;   /定义验证表达式/
+
+    	return reg.test(str);     /进行验证/
+
+    }
+
+    /*校验电话码格式 */
+
+    function isTelCode(str) {
+
+    	var reg= /^((0\d{2,3}-\d{7,8})|(1[3584]\d{9}))$/;
+    	return reg.test(str);
+    }
+
+    /*校验邮件地址是否合法 */
+
+    function IsEmail(str) {
+
+    	var reg=/^([a-zA-Z0-9-])+@([a-zA-Z0-9-])+(.[a-zA-Z0-9_-])+/;
+
+    	return reg.test(str);
+
+    }
+
   ```
 
 - 错误处理
 
   ```javascript
-  try {
-    //在这里运行代码
-  } catch(err) {
-    //在这里处理错误
-  }
-  //
-  function myFunction() {
-      var message, x;
-      message = document.getElementById("message");
-      message.innerHTML = "";
-      x = document.getElementById("demo").value;
-      try { 
-          if(x == "")  throw "值为空";
-          if(isNaN(x)) throw "不是数字";
-          x = Number(x);
-          if(x < 5)    throw "太小";
-          if(x > 10)   throw "太大";
-      }
-      catch(err) {
-          message.innerHTML = "错误: " + err;
-      }
-  }
+    try {
+      //在这里运行代码
+    } catch(err) {
+      //在这里处理错误
+    }
+    //
+    function myFunction() {
+        var message, x;
+        message = document.getElementById("message");
+        message.innerHTML = "";
+        x = document.getElementById("demo").value;
+        try { 
+            if(x == "")  throw "值为空";
+            if(isNaN(x)) throw "不是数字";
+            x = Number(x);
+            if(x < 5)    throw "太小";
+            if(x > 10)   throw "太大";
+        }
+        catch(err) {
+            message.innerHTML = "错误: " + err;
+        }
+    }
   ```
+
+  ​
+
 
 - [严格模式](http://www.runoob.com/js/js-strict.html)
 
@@ -328,6 +350,54 @@ JavaScript 可以通过不同的方式来输出数据：
 
   setTimeout//只会执行一次
   ```
+
+- 字符串转义  [HTML预留字符](http://www.runoob.com/tags/ref-entities.html)
+
+  ```javascript
+  //不能使用<等预留字符 需要进行转化
+  var p2;
+  p2.innerHTML = "<111111>";  //"<h1>12121212</h1>"
+  escape("<111111>");
+  ```
+
+- 常用的JS方法
+
+  ```javascript
+  window.onload  = function(){}; //dom文档和所有文件资源加载完
+  document.ready = function(){}; //dom文档加载完
+
+  //1-1.获取元素或者元素集合有几种方法
+  document.getElementById();        //根据id获取  返回的是单个元素
+  document.getElementByTagName();   //根据标签获取 返回元素的集合
+  document.getElementByClassName(); //根据类名获取 返回元素的集合
+  //1-2.按选择器查找 
+  var is = document.querySelectorAll('div#div4 input'); //返回元素的集合
+  var ele = is.item(i);  //返回其中的某个元素
+  document.querySelector("#id"); //返回的是单个元素
+
+  //2-0.修改整个文档的流
+  document.write("1111111111111111");
+  //2-1.修改HTML节点的内容
+  innerText("<p>text</p>");//innerText 修改文本节点
+  innerHTML("<p>text</p>");//innerHTML 修改HTML文档
+  //2-2.修改它的属性
+  p2.value = "":;
+  //2-3.修改它的CSS样式
+  p2.style.color = "red";
+  p2.style["color"] = "red";
+  //2-4.修改HTML的结构
+  var childNode = document.createElement("tr");//先创建元素
+  parentNode.appendChild(childNode);//再添加元素
+
+  //3.添加和删除事件
+  ele.onclick = function(){
+  };
+  ele.onclick = null;
+  ```
+
+- [this关键字](http://www.runoob.com/js/js-function-invocation.html)
+
+  - 一般而言，在Javascript中，this指向函数执行时的当前对象。
 
   ​
 
@@ -414,6 +484,130 @@ http://www.runoob.com/jsref/dom-obj-event.html DOM事件详细描述
 具体查看：http://www.runoob.com/cssref/css-selectors.html
 
 
+
+> ### Jqeury
+
+-  好处
+  - 简单的语法
+  - 浏览器兼容
+
+
+- 选择器语法
+
+- $ 美元符号关键字  等价于jQuery
+
+- 原生JS语法 与 Jquery语法做对比
+
+  ```javascript
+  //原生JS语法-0
+  window.onload  = function(){}; //dom文档和所有文件资源加载完
+  document.ready = function(){}; //dom文档加载完
+
+  //原生JS语法-1
+  //1-1.获取元素或者元素集合有几种方法
+  document.getElementById();        //根据id获取  返回的是单个元素
+  document.getElementByTagName();   //根据标签获取 返回元素的集合
+  document.getElementByClassName(); //根据类名获取 返回元素的集合
+  //1-2.按选择器查找 
+  var is = document.querySelectorAll('div#div4 input'); //返回元素的集合
+  var ele = is.item(i);  //返回其中的某个元素
+  document.querySelector("#id"); //返回的是单个元素
+
+  //2-0.修改整个文档的流
+  document.write("1111111111111111");
+  //2-1.修改HTML节点的内容
+  innerText("<p>text</p>");//innerText 修改文本节点
+  innerHTML("<p>text</p>");//innerHTML 修改HTML文档
+  //2-2.修改它的属性
+  p2.value = "":;
+  //2-3.修改它的CSS样式
+  p2.style.color = "red";
+  p2.style["color"] = "red";
+  //2-4.修改HTML的结构
+  var childNode = document.createElement("tr");//先创建元素
+  parentNode.appendChild(childNode);//再添加元素
+
+  //3.添加和删除事件
+  ele.onclick = function(){
+  };
+  ele.onclick = null;
+  //遍历
+  ele.parentNode; //获取父节点
+  ele.
+  ```
+
+- Jquery语法
+
+  ```javascript
+  var id= document.getElementById("id");//原生Js对象
+  //可以通过$的封装 封装为Jquery的对象$(id)
+  //原生Js对象使用原生方法 ，  Jquery的对象使用Jquery的方法
+
+  //Jquery语法
+  $(function(){
+     //.......
+  });
+  //
+  $(document).ready(fucntion(){
+    
+  });
+
+  //元素选择器-----------------------------
+  $("#id")
+  $("p")
+  $(".cls")
+
+  //2-1.修改HTML节点的内容
+  $("#id").text("Hello world!"); //修改文本节点
+  $("#id").html("<p>Hello world!</p>"); //修改HTML节点
+  //修改value-专门做了一个方法
+  $("#id").val();
+  $("#id").val("1111111");
+  //修改属性
+  $("#id").attr('disabled', false);
+  $("#id").attr('disabled');//获取属性值
+  removeAttr('style')//移除属性
+  //修改css属性
+  $("#id").addClass("");//添加一个类名
+  $("#id").css("color");//获取css属性
+  $("#id").css("color","red").css("",""); //链式语法
+  $("#id").css({"color":"red","":,""})
+  //添加元素
+  $("<tr>") //创建元素
+  $("<tr><td>新元素</td></tr>") //可以直接生成标签嵌套
+  $("<tr><td>新元素</td></tr>").appendTo($(parentNode);
+  $(parentNode).append($("<tr><td>新元素</td></tr>"));
+  //删除元素
+  $("#id").remove(); //删除被选元素（及其子元素）
+  $("#id").empty();  //从被选元素中删除子元素
+  //直接添加事件
+  //返回的是List则直接为list每一个元素添加事件
+  $("#id").click(function(){
+    
+  });
+  //移除事件
+  $("#id").unbind();
+  $("#id").unbind("click");//移除指定事件
+
+  //隐藏和显示元素
+  $(selector).hide(speed,callback);
+  $(selector).show(speed,callback);
+  $(selector).toggle(); //切换隐藏和显示状态
+
+
+  //jQuery链式语法
+  $("#id").attr('disabled', false).css().hide().click();
+  ```
+
+- [Jquery遍历](http://www.runoob.com/jquery/jquery-traversing.html)（取父节点或者兄弟节点）
+
+- [HTML/css方法](HTML/css方法)
+
+- [Jquery事件方法](http://www.runoob.com/jquery/jquery-ref-events.html)
+
+- AJAX
+
+- ​
 
 > ### 计算机怎么表示颜色
 
