--- a/前端技术.md
+++ b/前端技术.md
@@ -532,68 +532,76 @@ http://www.runoob.com/jsref/dom-obj-event.html DOM事件详细描述
   };
   ele.onclick = null;
   //遍历
-  ele.parentNode; //获取父节点
-  ele.
+  ele.parentNode; //获取父节点-直接父元素
+  ele.previousSibling;//上一个兄弟节点
+  ele.nextSibling;    //下一个兄弟节点
   ```
 
 - Jquery语法
 
   ```javascript
   var id= document.getElementById("id");//原生Js对象
-  //可以通过$的封装 封装为Jquery的对象$(id)
-  //原生Js对象使用原生方法 ，  Jquery的对象使用Jquery的方法
+  $(id);//可以通过$的封装,将原生Js对象封装为Jquery的对象
+  //原生Js对象使用原生方法 ，Jquery的对象使用Jquery的方法
 
   //Jquery语法
-  $(function(){
+  $(function(){//文档加载完
      //.......
   });
   //
-  $(document).ready(fucntion(){
+  $(document).ready(fucntion(){//文档加载完
     
   });
 
   //元素选择器-----------------------------
-  $("#id")
-  $("p")
-  $(".cls")
+  $("#id") //id选择器
+  $("p")   //标签选择器
+  $(".cls")//类选择器
 
   //2-1.修改HTML节点的内容
   $("#id").text("Hello world!"); //修改文本节点
   $("#id").html("<p>Hello world!</p>"); //修改HTML节点
   //修改value-专门做了一个方法
-  $("#id").val();
-  $("#id").val("1111111");
+  $("#id").val(); //获取值
+  $("#id").val("1111111");//设置值
   //修改属性
-  $("#id").attr('disabled', false);
+  $("#id").attr('disabled', false);//设置单个属性值
+  $("#id").attr({"href" : "#","title" : "jQuery教程" });//设置多个属性值
   $("#id").attr('disabled');//获取属性值
-  removeAttr('style')//移除属性
+  $("#id").removeAttr('style')//移除属性
+  //css类
+  $("#id").addClass("important"); //向被选元素添加一个或多个类
+  $("#id").removeClass("important p");//从被选元素删除一个或多个类
+  $("#id").toggleClass();//对被选元素进行添加/删除类的切换操作
   //修改css属性
-  $("#id").addClass("");//添加一个类名
   $("#id").css("color");//获取css属性
-  $("#id").css("color","red").css("",""); //链式语法
-  $("#id").css({"color":"red","":,""})
+  $("#id").css("color","red"); //设置单个CSS属性
+  $("#id").css({"color":"red","":,""});//设置多个 CSS 属性
   //添加元素
   $("<tr>") //创建元素
   $("<tr><td>新元素</td></tr>") //可以直接生成标签嵌套
-  $("<tr><td>新元素</td></tr>").appendTo($(parentNode);
-  $(parentNode).append($("<tr><td>新元素</td></tr>"));
+  $("<tr><td>新元素</td></tr>").appendTo($("#id"));//添加到
+
+  $("#id").append($("<tr><td>新元素</td></tr>")); //添加-在被选元素的结尾插入内容
+  $("#id").prepend();//在被选元素的开头插入内容
+  $("#id").after();  //在被选元素之后插入内容
+  $("#id").before(); //在被选元素之前插入内容
   //删除元素
   $("#id").remove(); //删除被选元素（及其子元素）
   $("#id").empty();  //从被选元素中删除子元素
+
   //直接添加事件
   //返回的是List则直接为list每一个元素添加事件
-  $("#id").click(function(){
-    
-  });
+  $("#id").click(function(){});
+  $("#id").bind("click",function(){});
   //移除事件
   $("#id").unbind();
-  $("#id").unbind("click");//移除指定事件
+  $("#id").unbind(event);//移除指定事件
 
   //隐藏和显示元素
   $(selector).hide(speed,callback);
   $(selector).show(speed,callback);
   $(selector).toggle(); //切换隐藏和显示状态
-
 
   //jQuery链式语法
   $("#id").attr('disabled', false).css().hide().click();
