--- a/前端技术.md
+++ b/前端技术.md
@@ -488,8 +488,8 @@ http://www.runoob.com/jsref/dom-obj-event.html DOM事件详细描述
 > ### Jqeury
 
 -  好处
-  - 简单的语法
-  - 浏览器兼容
+-  简单的语法
+   - 浏览器兼容
 
 
 - 选择器语法
@@ -616,6 +616,14 @@ http://www.runoob.com/jsref/dom-obj-event.html DOM事件详细描述
 - AJAX
 
 - ​
+
+
+
+> ### BootStrap
+
+使用它
+
+
 
 > ### 计算机怎么表示颜色
 
