--- a/我的文档/基础问题.md
+++ b/我的文档/基础问题.md
@@ -68,9 +68,9 @@
    -    不要使用通配符*,用指定列来
 
    -    ```java
-                          	//指定列查询 和 别名AS(为了数据库的命名规范和Java命名规范的统一)
-                          	private static final String COLUMN = 
-                          			  " a.id,"
+                             	//指定列查询 和 别名AS(为了数据库的命名规范和Java命名规范的统一)
+                             	private static final String COLUMN = 
+                             			  " a.id,"
         + " a.name,"
         			+ " a.parent_id AS 'parentId', "
         			+ " a.parent_ids AS 'parentIds'";
@@ -1162,7 +1162,7 @@ XML配置的方式：
     - 数据量比较大，越来越少被作为传输协议
 
 
-  - 导入jar包
+-   导入jar包
 
     ```xml
     	<!-- JSON解析#jackson-->
@@ -1183,57 +1183,116 @@ XML配置的方式：
     		</dependency>
     ```
 
-  - 在spring-mvc里面进行文件配置
+-   在spring-mvc里面进行文件配置
 
-  ```xml
-   <mvc:annotation-driven/><!-- 默认开启所有配置 -->
-  ```
-
-  - 后台 代码：往前台推送数据
-
-    ```java
-    	/**
-    	 * 往前台传JSON对象（直接把你需要的数据给你）
-    	 * @return
-    	 */
-    	@RequestMapping(value="/getJson", produces={"application/json;charset=UTF-8"})  //默认类型是JSON
-    	@ResponseBody 
-    	public List<Category> treeData(){
-    		List<Category> list = categoryDao.findAll();
-    		return list;
-    	}
+    ```xml
+     <mvc:annotation-driven/><!-- 默认开启所有配置 -->
     ```
 
-  - 前台部分：Ajax请求
+    -   后台 代码：往前台推送数据
 
-    ```javascript
-    $.ajax(
-    		{ 
-    					url: "/MySSMShop/getJson", 
-    				 	success: function(data){
-            				$.fn.zTree.init($("#treeDemo"), setting,  data);
-         				}
-         			}
-          		);
-    ```
+        ```java
+        	/**
+        * 往前台传JSON对象（直接把你需要的数据给你）
+        	 * @return
+        	 */
+        	@RequestMapping(value="/getJson", produces={"application/json;charset=UTF-8"})  //默认类型是JSON
+        	@ResponseBody 
+        	public List<Category> treeData(){
+        		List<Category> list = categoryDao.findAll();
+        		return list;
+        	}
+        ```
+      ```
 
-  - JSON注解-自定义你传输json的key值   注解加在实体对象的属性上面
+    - 前台部分：Ajax请求
 
-    ```java
-    @JsonInclude(JsonInclude.Include.NON_NULL)//所有不为空的对象都会被转化
-    public class Category implements Serializable {
-        private Integer id;
+      ```javascript
+      $.ajax(
+      		{ 
+      					url: "/MySSMShop/getJson", 
+      				 	success: function(data){
+              				$.fn.zTree.init($("#treeDemo"), setting,  data);
+           				}
+           			}
+            		);
+      ```
 
-        private String name;
-        
-        @JsonProperty("pId")  //jackson的注解
-        private Integer parentId;
-        @JsonIgnore
-        private String parentIds;
-        @JsonIgnore
-        private Date createTime;
-        @JsonIgnore
-        private Date updateTime;
-    ```
+    - JSON注解-自定义你传输json的key值   注解加在实体对象的属性上面
 
-    ​
+      ```java
+      @JsonInclude(JsonInclude.Include.NON_NULL)//所有不为空的对象都会被转化
+      public class Category implements Serializable {
+          private Integer id;
+
+          private String name;
+          
+          @JsonProperty("pId")  //jackson的注解
+          private Integer parentId;
+          @JsonIgnore
+          private String parentIds;
+          @JsonIgnore
+          private Date createTime;
+          @JsonIgnore
+          private Date updateTime;
+      ```
+
+      ​
+
+      ### 
+
+    > ### 上传下载
+
+    - 导入jar包 commons-fileupload和comons-io
+
+      ```xml
+      <dependency>
+      		<groupId>commons-fileupload</groupId>
+      		<artifactId>commons-fileupload</artifactId>
+      		<version>1.3.1</version>
+      	</dependency>
+      	<dependency>
+      		<groupId>commons-io</groupId>
+      		<artifactId>commons-io</artifactId>
+      		<version>2.4</version>
+      	</dependency>
+      ```
+
+    - SpringMV的方式需要开启文件上传功能,修改配置文件 multi-part
+
+      ```xml
+      <!-- 多段文件上传 需要commons-fileupload.jar和commons-io.jar--> 
+          <bean id="multipartResolver"
+                class="org.springframework.web.multipart.commons.CommonsMultipartResolver">
+              <property name="maxUploadSize" value="1073741824"/><!--上传文件的大小限制-->
+          </bean>
+      ```
+
+    - 修改form表单的enctype
+
+      ```html
+      <form enctype="multipart/form-data" method="post" action="#" >
+       <!--  enctype="application/x-www-form-urlencoded" 为form表单传输的默认格式 -->
+          <img src="${context }/${session_user.avartarUrl }" class="img-responsive img-rounded" width="300px">
+          <input type="file" name="avatarUrl"> <!--设置type为file-->
+       </form>
+      ```
+
+    - 编写上传逻辑，存储图片并且保存图片的路径（数据库里面只存储它的地址而不是存储它的整个图片资源）
+
+      ```java
+      //@RequestParam("avatarUrl") MultipartFile avatarUrl
+      @RequestMapping(value="/user/userInfo",method=RequestMethod.POST)
+      	public String userInfoAction(User user,HttpSession session,@RequestParam("avatarUrl") MultipartFile avatarUrl){
+      		if (!avatarUrl.isEmpty()) {
+      			System.out.println(avatarUrl);
+                  uploadImage(user, session, avatarUrl);
+              }
+      		
+      		return VIEW_PATH+"/user/userInfo";
+      	}
+      ```
+
+      ​
+
+​          
