多线程和并发1

--- a/我的文档/基础问题.md
+++ b/我的文档/基础问题.md
@@ -68,9 +68,9 @@
    -    不要使用通配符*,用指定列来
 
    -    ```java
-                             	//指定列查询 和 别名AS(为了数据库的命名规范和Java命名规范的统一)
-                             	private static final String COLUMN = 
-                             			  " a.id,"
+                                	//指定列查询 和 别名AS(为了数据库的命名规范和Java命名规范的统一)
+                                	private static final String COLUMN = 
+                                			  " a.id,"
         + " a.name,"
         			+ " a.parent_id AS 'parentId', "
         			+ " a.parent_ids AS 'parentIds'";
@@ -86,14 +86,23 @@
 
 5. (编写web层)   + JSP前台
 
+   - 参数验证： 双端验证 #  jqueryValidate插件和后端参数验证Hibernate-validation
+     - 只要是用户输入的信息 一定要做参数验证
+   - ​
+
 6. 实体类写完了需要判断他们之间的关联(一对一，一对多，多对多)
 
 7. 编写建表语句DDL  对应我们的Model
 
    - 数据库语言规范 全小写用下划线连接不同单词
-   - ​
 
-   ​
+
+> ### 常用工具类
+
+- apache-commons：
+- commons-io:
+- commons-lang3:
+- guava:工具类
 
 > ### 什么是Tomcat?
 
@@ -1186,7 +1195,7 @@ XML配置的方式：
 -   在spring-mvc里面进行文件配置
 
     ```xml
-     <mvc:annotation-driven/><!-- 默认开启所有配置 -->
+       <mvc:annotation-driven/><!-- 默认开启所有配置 -->
     ```
 
     -   后台 代码：往前台推送数据
