多线程和并发2

--- a/我的文档/基础面试题.md
+++ b/我的文档/基础面试题.md
@@ -1,5 +1,17 @@
 > ### 基础面试题
 
+[阿里面试回来，想和Java程序员谈一谈](http://www.importnew.com/22056.html)
+
+[115个Java面试题和答案——终极列表（上）](http://www.importnew.com/10980.html)
+
+[Java面试知识点总结](http://www.jianshu.com/p/1990eb1f66eb)
+
+[面试心得与总结---BAT、网易、蘑菇街](https://www.nowcoder.com/discuss/3043)
+
+[面试感悟----一名3年工作经验的程序员应该具备的技能](http://www.cnblogs.com/xrq730/p/5260294.html)
+
+[Java面试题全集（下-javaEE框架）](http://www.importnew.com/22087.html)
+
 
 
 > ##### Java线程
@@ -45,3 +57,28 @@
 17.如何确保N个线程可以访问N个资源同时又不导致死锁？
 
 使用多线程的时候，一种非常简单的避免死锁的方式就是：指定获取锁的顺序，并强制线程按照指定的顺序获取锁。因此，如果所有的线程都是以同样的顺序加锁和释放锁，就不会出现死锁了。
+
+
+
+
+
+
+
+
+
+> ### 高级
+
+Java中的锁机制?  互斥锁  悲观锁乐观锁  公平锁非公平锁
+
+
+
+多线程产生死锁的四个必要条件： 
+
+
+   	互斥条件：一个资源每次只能被一个进程使用。
+​        保持和请求条件：一个进程因请求资源而阻塞时，对已获得资源保持不放。
+​        不可剥夺调教：进程已获得资源，在未使用完成前，不能被剥夺。
+​        循环等待条件：若干进程之间形成一种头尾相接的循环等待资源关系。
+
+  只要破坏其中任意一个条件，就可以避免死锁，其中最简单的就是破环循环等待条件。按同一顺序访问对象，加载锁，释放锁。其中最简单的方法就是线程都是以同样的顺序加锁和释放锁，也就是破坏了第四个条件。
+
