--- a/我的文档/基础问题.md
+++ b/我的文档/基础问题.md
@@ -68,9 +68,9 @@
    -    不要使用通配符*,用指定列来
 
    -    ```java
-                                	//指定列查询 和 别名AS(为了数据库的命名规范和Java命名规范的统一)
-                                	private static final String COLUMN = 
-                                			  " a.id,"
+                                         	//指定列查询 和 别名AS(为了数据库的命名规范和Java命名规范的统一)
+                                         	private static final String COLUMN = 
+                                         			  " a.id,"
         + " a.name,"
         			+ " a.parent_id AS 'parentId', "
         			+ " a.parent_ids AS 'parentIds'";
@@ -1195,7 +1195,7 @@ XML配置的方式：
 -   在spring-mvc里面进行文件配置
 
     ```xml
-       <mvc:annotation-driven/><!-- 默认开启所有配置 -->
+             <mvc:annotation-driven/><!-- 默认开启所有配置 -->
     ```
 
     -   后台 代码：往前台推送数据
@@ -1304,4 +1304,80 @@ XML配置的方式：
 
       ​
 
-​          
+      ​
+
+      ​
+
+      > ### 从头搭建一个SSM框架
+
+      1. 创建一个Maven工程
+
+         记得选择maven-archttype-webapp方式
+
+         src/main/java:源文件
+
+         src/main/resoureces:配置文件
+
+         src/main/webapp:web工程的jsp等动态和静态资源
+
+         src/test/java:测试类(以后你们运行mvn install的时候会自动执行这个路径下的@Test方法)
+
+      2. 使用Pom.xml导入相对应的jar包
+
+      3. 配置并测试Spring的配置文件 spring-context.xml
+
+         ```xml
+         <!-- 载入常用的配置 -->
+             <context:property-placeholder location="classpath:jdbc.properties"/>
+             
+             <!-- 注解扫描所有包 -->
+             <context:component-scan  base-package="com.ssf.system.*">
+                <!-- 不扫描@Controller注解交给SpringMVC -->
+                <context:exclude-filter type="annotation" expression="org.springframework.stereotype.Controller"/>
+             </context:component-scan>
+
+         	<context:annotation-config/><!-- 开启注解 -->
+         	
+         	<!-- 数据源，不使用ORM框架 -->
+         	<bean id="dataSource" 
+         	class="org.springframework.jdbc.datasource.DriverManagerDataSource"> 
+         	    <property name="driverClassName" value="${jdbc.driverClassName}" />
+         		<property name="url" value="${jdbc.url}" />
+         		<property name="username" value="${jdbc.username}" />
+         		<property name="password" value="${jdbc.password}" />
+         	</bean>
+         	 
+         	<!-- 自己写的DBUtils --> 
+         	<bean id="dbUtils" class="com.ssf.utils.DBUtils">
+         	     <property name="dataSource" ref="dataSource" />
+         	</bean>
+
+         ```
+
+      4. mvn命令创建mvn工程
+
+         ```
+         mvn archetype:generate -DgroupId=com.ssf -DartifactId=MavenSSMDemo3 -DarchetypeArtifactId=maven-archetype-webapp -DinteractiveMode=false -DarchetypeCatalog=local -X
+
+         ```
+
+         ​
+
+> ## #一些功能性的东西
+
+加密: MD5(对称加密) , Base64 ,Sha1(非对称加密) :  工具类 commons-codec.jar
+
+```xml
+<dependency>
+		<groupId>commons-collections</groupId>
+		<artifactId>commons-collections</artifactId>
+</dependency>
+```
+
+- 对密码进行加密  
+
+  - 1.存库时候需要对密码加密MD5编码   md5(pwd)
+
+  - 2.用户登录的时候 进行MD5编码    pwd  # md5(pwd)  跟我数据库里面做比对
+
+    ​
