--- a/我的文档/基础问题.md
+++ b/我的文档/基础问题.md
@@ -1,3 +1,35 @@
+> ### 汇总说明
+
+- 项目说明部分
+
+  - 统一下载方式 git clone -b  工程名   git@github.com:arafat5549/SSFDemo.git 工程名 
+
+
+  - myshop ： 动态WEB工程 【 Servlet+JSP+自己实现的DBUtil的商城前台】 MVC+WEB基础+数据库+WEB分层思想+代码规范 包含说明文档部分
+  - myssmshop: 使用Maven构建的SSM框架实现的商城后台  未完成。自己去完成一个商城的后台
+  - findchild:  动态WEB工程 【后台程序的构建和前台一些常用的UI组件+Mybatis自动生成数据库DAO的插件】
+  - emptyssm: 演示了三大框架怎么整合起来 如何协作和怎么使用
+  - testspring: 包含了Hibernate，Myabtis，SpringJDBC三大ORM的整合。
+  - beauty_ssm:真实三大框架starter脚手架 ： git clone https://github.com/wosyingjun/beauty_ssm.git
+    - https://github.com/ServiceStack/redis-windows 在Window上面安装Redis
+    - Nginx：静态网页服务器-反向代理 一般和Tomcat一起使用
+
+Docker，VirtualBox：虚拟环境 ，开发和运行环境只要维护一份，偏运维的部分，（能让整个团队的开发和运行环境统一）
+
+> 反向代理
+
+正向代理代理的是客户端，反向代理代理的是服务端。
+
+分布式和集群：
+
+- N个服务器跑的是同一份WEB应用，冗余，为了分解服务器压力和安全备份
+- 分布式：把应用拆分成模块，
+- 是一起使用的
+
+用户请求进来直接访问Tomcat，先经过静态服务器Nignx转发，如果可以处理就直接处理，不能处理转发给可以处理的Tomcat。
+
+
+
 > ### Java基础
 
 **[JAVA基础知识点](http://www.jianshu.com/p/1990eb1f66eb)**
@@ -68,9 +100,9 @@
    -    不要使用通配符*,用指定列来
 
    -    ```java
-                                         	//指定列查询 和 别名AS(为了数据库的命名规范和Java命名规范的统一)
-                                         	private static final String COLUMN = 
-                                         			  " a.id,"
+                                               	//指定列查询 和 别名AS(为了数据库的命名规范和Java命名规范的统一)
+                                               	private static final String COLUMN = 
+                                               			  " a.id,"
         + " a.name,"
         			+ " a.parent_id AS 'parentId', "
         			+ " a.parent_ids AS 'parentIds'";
@@ -706,21 +738,32 @@ XML配置的方式：
 
 
 
-> 技术选型-第三方服务框架
+
+
+
+
+> ### 技术选型-第三方服务框架
 
 1. Spring框架            -4.1.3（最小化配置方式 基于注解）
 2. SpringMVC框架    -4.1.3
-3. MybatisORM框架 -3.3.1
+3. Mybatis-ORM框架 -3.3.1
 4. 参数验证框架Hibernate-Valiadation -5.5.1
 5. 日记框架Log4j使用slf4j日记接口类整合(这样以后切换到其他的日记框架也能统一使用)  -1.2
 6. 数据库缓存 EhCache
 7. 数据库连接池 Druid
 8. 事务管理 - Spring的事务管理
 9. Quartz任务调用
+10. 全局错误处理 DTO-JSON数据来作为通信协议
 
 > 技术选型-工具类
 
-
+1. Apache-Commons  : NumberUtils
+2. commons-io:文件读取
+3. commons-fileupload:图片上传
+4. commons-lang3:常用的工具类
+5. commons-codec:加密解密的包 md5 base64 sha1
+6. guava : 谷歌的工具处理包
+7. jodaTime处理时间的包
 
 > ### Spring集成MyBatis
 
@@ -1151,6 +1194,10 @@ XML配置的方式：
 
   ​
 
+  > ### Spring整合Quartz任务调度
+
+  ​
+
   > ### SpringMVC整合JSON和XML的解析处理
 
   - JSON的优点：
@@ -1195,7 +1242,7 @@ XML配置的方式：
 -   在spring-mvc里面进行文件配置
 
     ```xml
-             <mvc:annotation-driven/><!-- 默认开启所有配置 -->
+                 <mvc:annotation-driven/><!-- 默认开启所有配置 -->
     ```
 
     -   后台 代码：往前台推送数据
