--- a/我的文档/项目流程.md
+++ b/我的文档/项目流程.md
@@ -41,6 +41,8 @@
   - DAO层的编写
 
     - ORM框架Mybatis
+      - 导入jar包
+      - 编写Dao接口和Mapper映射文件(可以使用接口扫描的方式最小化配置)
     - 原生DBUtils
       - JDBC
         - JDBC的连接语法 driver，url，password，username
@@ -50,7 +52,7 @@
 
   - Service层业务层  biz业务层Business
 
-    - 事务一般在Service层处理
+    - 事务一般在Service层处理(Spring是怎么处理事务的)
     - Service层处理业务逻辑 判断业务的成功或者失败
 
   - web层
@@ -60,6 +62,11 @@
     1. 创建Servlet并在web.xml注册它
     2. 评估你有哪些页面，创建页面
     3. 页面的组织，一般是按对象来做区分 要放在WEB-INF下（避免用户直接访问，屏蔽网站细节）
+    4. web层一般就是处理请求，响应请求
+       - 如果是用户传的参数 一定要进行参数验证-双端验证(前端jquery-validate和后端Hibernate-valiadte)
+       - 成功后 页面跳转 参数传递给前台
+       - 失败后 页面跳转 参数传递给前台
+       - 页面展示是jsp列表遍历 还是获取ajax-Json数据的方式
 
     ​
 
