--- a/我的文档/基础面试题.md
+++ b/我的文档/基础面试题.md
@@ -14,6 +14,16 @@
 
 
 
+如果百度的话 去CSDN  中文新手社区
+
+去github找代码demo,自己看书(去豆瓣读书找8分以上)，去stackoverflow提问
+
+ 学习的过程中遇到问题 善用搜索引擎google(还有google翻译)
+
+
+
+
+
 > ##### Java线程
 
 11.进程和线程的区别是什么？
