--- a/我的文档/基础概念.md
+++ b/我的文档/基础概念.md
@@ -32,3 +32,71 @@
 
 > **SSH(SpringStruts2Hibernate) JavaWEB开发三大框架**
 
+
+
+
+
+> 常用的外部Jar包
+
+数据库连接池:
+
+DBCP
+
+C3P0 
+
+Druid
+
+缓存:
+
+Ehcache
+
+Redis / Jedis
+
+MongoDb
+
+常用的工具类
+
+commons-beanutils  (反射 复制和克隆javabean)
+
+commons-lang3  (通用的工具类 StrigUtils ,NumberUtils)
+
+commons-codec (加密解密相关):
+
+commons-io:
+
+commons-fileupload:
+
+guava：谷歌的工具类包
+
+时间处理：JodaTime
+
+
+
+office文档处理：
+
+POI：Excel，word文档
+
+
+
+JSON解析：
+
+GSON
+
+Jackson
+
+
+
+XML解析：
+
+dom4j
+
+jdom
+
+jdk自带的xml
+
+
+
+springside4 通用工具类 
+
+https://github.com/springside/springside4/tree/master/modules/utils/src/main/java/org/springside/modules/utils
+
